--- a/index.html
+++ b/index.html
@@ -72,10 +72,18 @@
       </h1>
       
       <div class="author-list has-text-centered">
-        <span>Wenchuan Wang<sup>1</sup>,</span>
-        <span>Mengqi Huang<sup>1</sup>,</span>
-        <span>Yijing Tu<sup>1</sup>,</span>
-        <span>Zhendong Mao<sup>1*</sup></span>
+        <span>
+          <a href="mailto:wenc_k@mail.ustc.edu.cn" target="_blank">Wenchuan Wang</a><sup>1</sup>,
+        </span>
+        <span>
+          <a href="mailto:huangmq@mail.ustc.edu.cn" target="_blank">Mengqi Huang</a><sup>1</sup>,
+        </span>
+        <span>
+          <a href="mailto:tuyijing@mail.ustc.edu.cn" target="_blank">Yijing Tu</a><sup>1</sup>,
+        </span>
+        <span>
+          <a href="mailto:zdmao@ustc.edu.cn" target="_blank">Zhendong Mao</a><sup>1*</sup>
+        </span>
         <div class="institution mt-2">
           <sup>1</sup>University of Science and Technology of China
         </div>
@@ -85,11 +93,11 @@
       <div class="buttons is-centered are-medium">
         <a href="#paper" class="button is-rounded">
           <span class="icon"><i class="fas fa-file-pdf"></i></span>
-          <span>Paper (PDF)</span>
+          <span>Paper</span>
         </a>
         <a href="#code" class="button is-rounded is-dark">
           <span class="icon"><i class="fab fa-github"></i></span>
-          <span>Code</span>
+          <span>Code(coming soon)</span>
         </a>
       </div>
     </div>
