--- a/index.html
+++ b/index.html
@@ -100,6 +100,19 @@
           <span>Code(coming soon)</span>
         </a>
       </div>
+
+      <!-- 新增展示图区块 -->
+      <div class="teaser-image" style="margin: 3rem auto 2rem; max-width: 1200px;">
+        <img src="./img/result.png" 
+             alt="DualReal Result Showcase"
+             style="width: 100%; 
+                    height: auto;
+                    border-radius: 4px;
+                    box-shadow: 0 4px 12px rgba(0,0,0,0.1);">
+        <p class="has-text-centered is-italic" style="margin-top: 1rem; color: #666;">
+          Figure 1: Our method achieves high-fidelity identity preservation and motion consistency
+        </p>
+      </div>
     </div>
   </section>
 
