--- a/index.html
+++ b/index.html
@@ -60,6 +60,28 @@
       width: 100%;
       height: 100%;
     }
+
+    /* 新增图片动画效果 */
+    .teaser-image {
+    transition: transform 0.3s ease;
+    }
+
+    .teaser-image:hover {
+    transform: translateY(-2px);
+    }
+
+    /* 响应式调整 */
+    @media screen and (max-width: 768px) {
+    .teaser-image {
+        margin: 2rem auto;
+        padding: 0 1rem;
+    }
+    
+    .teaser-image img {
+        border-radius: 2px;
+    }
+    }
+
   </style>
 </head>
 
