--- a/index.html
+++ b/index.html
@@ -61,25 +61,47 @@
       height: 100%;
     }
 
-    /* 新增图片动画效果 */
+    /* 修改图片容器样式 */
     .teaser-image {
-    transition: transform 0.3s ease;
+        margin: 4rem auto 3rem;  /* 增加上下边距 */
+        max-width: 1400px;      /* 增大最大宽度 */
+        padding: 0 2rem;        /* 增加水平内边距 */
     }
 
-    .teaser-image:hover {
-    transform: translateY(-2px);
+    .teaser-image img {
+        width: 100%;           /* 保持响应式宽度 */
+        height: auto;          /* 保持原始比例 */
+        border-radius: 6px;    /* 增大圆角半径 */
+        box-shadow: 0 6px 20px rgba(0,0,0,0.15); /* 加强阴影效果 */
+    }
+
+    /* 图片说明文字调整 */
+    .teaser-image p {
+        font-size: 1.1rem;     /* 增大字体 */
+        margin-top: 1.5rem;     /* 增加间距 */
     }
 
     /* 响应式调整 */
     @media screen and (max-width: 768px) {
-    .teaser-image {
-        margin: 2rem auto;
+        .teaser-image {
+        margin: 3rem auto;
+        padding: 0 1.5rem;
+        }
+        
+        .teaser-image img {
+        border-radius: 4px;
+        }
+
+        .teaser-image p {
+        font-size: 1rem;
         padding: 0 1rem;
+        }
     }
-    
-    .teaser-image img {
-        border-radius: 2px;
-    }
+
+    @media screen and (min-width: 1600px) {
+        .teaser-image {
+        max-width: 90vw;     /* 在超大屏幕上使用视口单位 */
+        }
     }
 
   </style>
