--- a/index.html
+++ b/index.html
@@ -172,20 +172,10 @@
     </div>
   </section>
 
-  <!-- 主展示视频 -->
-  <section class="section">
-    <div class="content-block">
-      <h2 class="title is-3 has-text-centered">Video Demo</h2>
-      <div class="video-container">
-        <iframe src="https://www.youtube.com/embed/<video-youtube-id>" frameborder="0" allowfullscreen></iframe>
-      </div>
-    </div>
-  </section>
-
   <!-- 方法图示 -->
   <section class="section" style="background: #f8f9fa;">
     <div class="content-block">
-      <h2 class="title is-3 has-text-centered">Method Overview</h2>
+      <h2 class="title is-3 has-text-centered">How does it work?</h2>
       <div class="has-text-centered">
         <img src="<image-method-diagram>" alt="Method diagram" style="max-width: 90%;">
       </div>
@@ -212,6 +202,16 @@
             <source src="<video-our-result>" type="video/mp4">
           </video>
         </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- 主展示视频 -->
+  <section class="section">
+    <div class="content-block">
+      <h2 class="title is-3 has-text-centered">Video Demo</h2>
+      <div class="video-container">
+        <iframe src="https://www.youtube.com/embed/<video-youtube-id>" frameborder="0" allowfullscreen></iframe>
       </div>
     </div>
   </section>
