--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
   </section>
 
   <!-- 方法图示 -->
-  <section class="section" style="background: #f8f9fa;">
+  <section class="section">
     <div class="content-block">
       <h2 class="title is-3 has-text-centered">How does it work?</h2>
       <div class="has-text-centered">
