--- a/index.html
+++ b/index.html
@@ -72,7 +72,6 @@
         width: 100%;           /* 保持响应式宽度 */
         height: auto;          /* 保持原始比例 */
         border-radius: 6px;    /* 增大圆角半径 */
-        box-shadow: 0 6px 20px rgba(0,0,0,0.15); /* 加强阴影效果 */
     }
 
     /* 图片说明文字调整 */
@@ -151,8 +150,7 @@
              alt="DualReal Result Showcase"
              style="width: 100%; 
                     height: auto;
-                    border-radius: 4px;
-                    box-shadow: 0 4px 12px rgba(0,0,0,0.1);">
+                    border-radius: 4px;">
         <p class="has-text-centered is-italic" style="margin-top: 1rem; color: #666;">
           Figure 1: Generated customization results of our proposed novel paradigm DualReal. Given subject images and motion videos, DualReal generates high-quality customized identity and motion simultaneously, without compromising the consistency of either dimension.
         </p>
@@ -181,8 +179,7 @@
         alt="DualReal Pipeline"
         style="width: 100%; 
                 height: auto;
-                border-radius: 4px;
-                box-shadow: 0 4px 12px rgba(0,0,0,0.1);">
+                border-radius: 4px;">
       </div>
       <div class="content mt-4">
         <p> At each training step, we first dynamically select the training phase Z(i.e., identity or motion) to determine the data processing path. The specific data undergoes noise injection and combines with the text embeddings. StageBlender Controller governs two-dimension adapters' contributions in Dual-Aware Block (DA-Block) through time-aware conditioning of current denoising step and fused feature representations. In DA-Block, the training-stage(Z) adapter learns the current information guided by the frozen dimension prior, and employs a regularization strategy to avoid dimensional knowledge leakage, achieving joint training. Both branches engage in residual connections with DiT outputs.  
