--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
                     height: auto;
                     border-radius: 4px;">
         <p>
-          Figure 1: Generated customization results of our proposed novel paradigm DualReal. Given subject images and motion videos, DualReal generates high-quality customized identity and motion simultaneously, without compromising the consistency of either dimension.
+          Generated customization results of our proposed novel paradigm DualReal. Given subject images and motion videos, DualReal generates high-quality customized identity and motion simultaneously, without compromising the consistency of either dimension.
         </p>
       </div>
     </div>
