--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
       </div>
       <div class="content mt-4">
         <p> 
-            Illustration of proposed StageBlender Controller, which employs Adaptive LayerNorm mechanism  modulates text-visual feature based on timestep-conditional embeddings, then maps the feature to multiple groups after residual gated connections. These scaled weight are subsequently routed to their respective DA-Blocks for processing.
+            StageBlender Controller employs Adaptive LayerNorm mechanism  modulates text-visual feature based on timestep-conditional embeddings, then maps the feature to multiple groups after residual gated connections. These scaled weight are subsequently routed to their respective DA-Blocks for processing.
         </p>
       </div>
     </div>
