--- a/index.html
+++ b/index.html
@@ -205,19 +205,17 @@
   <section class="section">
     <div class="content-block">
       <h2 class="title is-3 has-text-centered">Comparison Results</h2>
-      <div class="columns is-vcentered">
-        <div class="column">
-          <h3 class="title is-5 has-text-centered">Baseline</h3>
-          <video muted controls style="width: 100%;">
-            <source src="<video-baseline>" type="video/mp4">
-          </video>
-        </div>
-        <div class="column">
-          <h3 class="title is-5 has-text-centered">Our Method</h3>
-          <video muted controls style="width: 100%;">
-            <source src="<video-our-result>" type="video/mp4">
-          </video>
-        </div>
+      <div class="has-text-centered">
+        <img src="./img/maintesult.png" 
+        alt="DualReal Pipeline"
+        style="width: 60%; 
+                height: auto;
+                border-radius: 4px;">
+      </div>
+      <div class="content mt-4">
+        <p> 
+            <b>Qualitative comparison with existing methods.</b> Compared with other methods, DualReal achieves high identity consistency with coherent motion, demonstrating the advantage of joint training in balancing pattern conflicts.
+        </p>
       </div>
     </div>
   </section>
