--- a/index.html
+++ b/index.html
@@ -206,9 +206,9 @@
     <div class="content-block">
       <h2 class="title is-3 has-text-centered">Comparison Results</h2>
       <div class="has-text-centered">
-        <img src="./img/maintesult.png" 
+        <img src="./img/maintesult-1.png" 
         alt="DualReal Pipeline"
-        style="width: 80%; 
+        style="width: 100%; 
                 height: auto;
                 border-radius: 4px;">
       </div>
