--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
     <div class="content-block">
       <h2 class="title is-3 has-text-centered">Comparison Results</h2>
       <div class="has-text-centered">
-        <img src="./img/maintesult-1.png" 
+        <img src="./img/mainresult.png" 
         alt="DualReal Pipeline"
         style="width: 100%; 
                 height: auto;
