--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
   </section>
 
   <!-- 对比结果 -->
-  <section class="section" style="background: #f8f9fa;">
+  <section class="section">
     <div class="content-block">
       <h2 class="title is-3 has-text-centered">Comparison Results</h2>
       <div class="has-text-centered">
