--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
       </div>
       <div class="content mt-4">
         <p> 
-          <b>Quantitative comparison of personalization video generation for customized subject and motion.</b> "T.Cons" and "T.Flickering" denotes Temporal Consistency and Temporal Flickering, respectively. Compared with other methods, \textit{DualReal} achieved average improvements of <b>21.7\%</b> on CLIP-I and <b>31.8\%</b> on DINO-I, recorded the best results on three motion quality metrics (T.Cons, Motion Smoothness, and Temporal Flickering), and ranked second on CLIP-T. The motion datasets achieve an average Dynamic Degree of <b>12.02</b> and parenthetical values quantify the current method’s deviation from this benchmark to determine the intensity consistency of movement.
+          <b>Quantitative comparison of personalization video generation for customized subject and motion.</b> "T.Cons" and "T.Flickering" denotes Temporal Consistency and Temporal Flickering, respectively. Compared with other methods, DualReal achieved average improvements of <b>21.7%</b> on CLIP-I and <b>31.8%</b> on DINO-I, recorded the best results on three motion quality metrics (T.Cons, Motion Smoothness, and Temporal Flickering), and ranked second on CLIP-T. The motion datasets achieve an average Dynamic Degree of <b>12.02</b> and parenthetical values quantify the current method’s deviation from this benchmark to determine the intensity consistency of movement.
         </p>
       </div>
     </div>
