--- a/index.html
+++ b/index.html
@@ -233,10 +233,10 @@
     </div>
   </section>
 
-  <!-- 主展示视频 -->
-  <section class="section">
+  <!-- 更多结果 -->
+  <section class="section" style="background: #f8f9fa;">
     <div class="content-block">
-      <h2 class="title is-3 has-text-centered">Video Demo</h2>
+      <h2 class="title is-3 has-text-centered">More Results</h2>
       <div class="video-container">
         <iframe src="https://www.youtube.com/embed/<video-youtube-id>" frameborder="0" allowfullscreen></iframe>
       </div>
