--- a/index.html
+++ b/index.html
@@ -116,19 +116,22 @@
       
       <div class="author-list has-text-centered">
         <span>
-          <a href="mailto:wenc_k@mail.ustc.edu.cn" target="_blank">Wenchuan Wang</a><sup>1</sup>,
+          <a href="mailto:wenc_k@mail.ustc.edu.cn" target="_blank">Wenchuan Wang</a>,
         </span>
         <span>
-          <a href="mailto:huangmq@mail.ustc.edu.cn" target="_blank">Mengqi Huang</a><sup>1</sup>,
+          <a href="mailto:huangmq@mail.ustc.edu.cn" target="_blank">Mengqi Huang</a>,
         </span>
         <span>
-          <a href="mailto:tuyijing@mail.ustc.edu.cn" target="_blank">Yijing Tu</a><sup>1</sup>,
+          <a href="mailto:tuyijing@mail.ustc.edu.cn" target="_blank">Yijing Tu</a>,
         </span>
         <span>
-          <a href="mailto:zdmao@ustc.edu.cn" target="_blank">Zhendong Mao</a><sup>1*</sup>
+          <a href="mailto:zdmao@ustc.edu.cn" target="_blank">Zhendong Mao</a><sup>*</sup>
         </span>
         <div class="institution mt-2">
-          <sup>1</sup>University of Science and Technology of China
+          University of Science and Technology of China,
+        </div>
+        <div class="institution mt-2">
+          *Corresponding author.
         </div>
       </div>
 
