--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
           University of Science and Technology of China,
         </div>
         <div class="institution mt-2">
-          *Corresponding author.
+          <sup>*</sup>Corresponding author.
         </div>
       </div>
 
