--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
 
     .video-slider {
         position: relative;
-        max-width: 800px;
+        max-width: 600px;
         margin: 0 auto; /* 居中 */
         overflow: hidden;
         border-radius: 12px; /* 可选圆角 */
@@ -300,7 +300,7 @@
   </section>
 
   <!-- 轮播容器改为 section -->
-  <section class="section video-section">
+  <section class="section video-section" style="background: #f8f9fa;">
     <div class="container">
         <!-- 视频容器保留原有结构 -->
         <div class="video-slider">
