--- a/index.html
+++ b/index.html
@@ -126,8 +126,8 @@
         background: rgba(0,0,0,0.8);
     }
 
-    .prev { left: -40px; }
-    .next { right: -40px; }
+    .prev { left: 0; }
+    .next { right: 0; }
 
     .video-section {
         position: relative;
@@ -137,7 +137,7 @@
 
     .video-slider {
         position: relative;
-        max-width: 600px;
+        max-width: 500px;
         margin: 0 auto; /* 居中 */
         overflow: hidden;
         border-radius: 12px; /* 可选圆角 */
