--- a/index.html
+++ b/index.html
@@ -118,8 +118,8 @@
         background: rgba(0,0,0,0.8);
     }
 
-    .prev { left: 0; }
-    .next { right: 0; }
+    .prev { left: -40px; }
+    .next { right: -40px; }
 
     .video-section {
         position: relative;
