--- a/index.html
+++ b/index.html
@@ -348,10 +348,29 @@
                 <!-- 视频项保持不变 -->
                 <div class="video-slide">
                     <video controls>
-                        <source src="videos/case1.mp4" type="video/mp4">
+                        <source src="videos/case3.mp4" type="video/mp4">
                     </video>
                 </div>
-                <!-- 其他视频项... -->
+                <div class="video-slide">
+                  <video controls>
+                      <source src="videos/case5.mp4" type="video/mp4">
+                  </video>
+                </div>
+                <div class="video-slide">
+                  <video controls>
+                      <source src="videos/case8.mp4" type="video/mp4">
+                  </video>
+                </div>
+                <div class="video-slide">
+                  <video controls>
+                      <source src="videos/case12.mp4" type="video/mp4">
+                  </video>
+                </div>
+                <div class="video-slide">
+                  <video controls>
+                      <source src="videos/case13.mp4" type="video/mp4">
+                  </video>
+                </div>
             </div>
             
             <!-- 导航按钮 -->
