--- a/index.html
+++ b/index.html
@@ -147,9 +147,12 @@
     }
 
     .video-slide {
+        display: flex;
         flex: 0 0 100%; /* 每个slide占满容器宽度 */
         min-width: 100%;
         box-sizing: border-box;
+        justify-content: center;
+        align-items: center;
     }
         
     /* 响应式调整 */
