--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
         position: relative;
         max-width: 800px;
         margin: 0 auto; /* 居中 */
-        overflow: hidden;  /* TODO. */
+        overflow: visible;  /* TODO. */
         border-radius: 12px; /* 可选圆角 */
         box-shadow: 0 10px 20px rgba(0,0,0,0.1); /* 可选阴影 */
         padding: 0 40px;
