--- a/index.html
+++ b/index.html
@@ -131,6 +131,7 @@
     .video-slider {
         position: relative;
         max-width: 650px;
+        max-height: 400px;
         margin: 0 auto; /* 居中 */
         overflow: visible;  /* TODO. */
         border-radius: 12px; /* 可选圆角 */
