--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
     /* 视频元素样式 */
     video {
         width: 80%; /* 改为100%宽度 */
-        max-height: 500px; /* 增加最大高度 */
+        max-height: auto; /* 增加最大高度 */
         object-fit: contain; /* 保持比例 */
     }
         
