--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
     video {
         width: 100%; /* 改为100%宽度 */
         height: auto; /* 增加最大高度 */
-        object-fit: contain; /* 保持比例 */
+        object-fit: cover; /* 保持比例 */
     }
         
     /* 响应式调整 */
