--- a/index.html
+++ b/index.html
@@ -147,7 +147,34 @@
         height: auto; /* 增加最大高度 */
         object-fit: contain; /* 保持比例 */
     }
-        
+
+    .slide-item {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      text-align: center;
+    }
+    .slide-item video {
+      width: 100%;
+      height: auto;
+      object-fit: contain;
+      background: black;
+    }
+    .slide-extra {
+      margin-top: 0.75rem;
+      width: 100%;
+    }
+    .slide-extra img {
+      max-width: 100%;
+      height: auto;
+      border-radius: 4px;
+    }
+    .slide-extra p {
+      font-size: 0.9rem;
+      margin-top: 0.5rem;
+      color: #555;
+    }
+
     /* 响应式调整 */
     @media (max-width: 768px) {
         .video-slider {
@@ -445,7 +472,7 @@
   document.addEventListener('DOMContentLoaded', () => {
     const slider = document.querySelector('.video-slider');
     const slidesContainer = document.querySelector('#slidesContainer');
-    const slides = document.querySelectorAll('.video-slide');
+    const slides = document.querySelectorAll('.slide-item');
     const prevButton = document.querySelector('.prev');
     const nextButton = document.querySelector('.next');
     let currentIndex = 0;
