--- a/index.html
+++ b/index.html
@@ -367,7 +367,7 @@
                     <source src="videos/case3.mp4" type="video/mp4">
                   </video>
                   <div class="slide-extra">
-                    <img src="img/ablation.png" alt="Case3 Thumbnail">
+                    <img src="id_img/penguin.png" alt="Case3 Thumbnail">
                     <p>Custom motion result for Case 3 demonstrating smooth transitions.</p>
                   </div>
                 </div>
@@ -376,7 +376,7 @@
                     <source src="videos/case5.mp4" type="video/mp4">
                   </video>
                   <div class="slide-extra">
-                    <img src="img/ablation.png" alt="Case5 Thumbnail">
+                    <img src="id_img/dog.png" alt="Case5 Thumbnail">
                     <p>Custom motion result for Case 5 demonstrating smooth transitions.</p>
                   </div>
                 </div>
@@ -385,13 +385,13 @@
                     <source src="videos/case8.mp4" type="video/mp4">
                   </video>
                   <div class="slide-extra">
-                    <img src="img/ablation.png" alt="Case8 Thumbnail">
+                    <img src="id_img/wanou.jpg" alt="Case8 Thumbnail">
                     <p>Custom motion result for Case 8 demonstrating smooth transitions.</p>
                   </div>
                 </div>
                 <div class="slide-item">
                   <video controls>
-                    <source src="videos/case10.mp4" type="video/mp4">
+                    <source src="id_img/redbear.jpg" type="video/mp4">
                   </video>
                   <div class="slide-extra">
                     <img src="img/ablation.png" alt="Case10 Thumbnail">
@@ -403,7 +403,7 @@
                     <source src="videos/case12.mp4" type="video/mp4">
                   </video>
                   <div class="slide-extra">
-                    <img src="img/ablation.png" alt="Case12 Thumbnail">
+                    <img src="id_img/cat.jpg" alt="Case12 Thumbnail">
                     <p>Custom motion result for Case 12 demonstrating smooth transitions.</p>
                   </div>
                 </div>
