--- a/index.html
+++ b/index.html
@@ -118,8 +118,8 @@
     }
 
 
-    .prev { left: -40px; }
-    .next { right: -40px; }
+    .prev { left: -20px; }
+    .next { right: -20px; }
 
     .video-section {
         position: relative;
@@ -391,10 +391,10 @@
                 </div>
                 <div class="slide-item">
                   <video controls>
-                    <source src="id_img/redbear.jpg" type="video/mp4">
+                    <source src="videos/case10.mp4" type="video/mp4">
                   </video>
                   <div class="slide-extra">
-                    <img src="img/ablation.png" alt="Case10 Thumbnail">
+                    <img src="id_img/redbear.jpg" alt="Case10 Thumbnail">
                     <p>Custom motion result for Case 10 demonstrating smooth transitions.</p>
                   </div>
                 </div>
