--- a/index.html
+++ b/index.html
@@ -118,8 +118,8 @@
     }
 
 
-    .prev { left: -10px; }
-    .next { right: -10px; }
+    .prev { left: -7px; }
+    .next { right: -7px; }
 
     .video-section {
         position: relative;
@@ -366,46 +366,41 @@
                   <video controls>
                     <source src="videos/case3.mp4" type="video/mp4">
                   </video>
-                  <div class="slide-extra">
-                    <img src="id_img/penguin.png" alt="Case3 Thumbnail">
-                    <p>Custom motion result for Case 3 demonstrating smooth transitions.</p>
-                  </div>
                 </div>
                 <div class="slide-item">
                   <video controls>
                     <source src="videos/case5.mp4" type="video/mp4">
                   </video>
-                  <div class="slide-extra">
-                    <img src="id_img/dog.png" alt="Case5 Thumbnail">
-                    <p>Custom motion result for Case 5 demonstrating smooth transitions.</p>
-                  </div>
                 </div>
                 <div class="slide-item">
                   <video controls>
                     <source src="videos/case8.mp4" type="video/mp4">
                   </video>
-                  <div class="slide-extra">
-                    <img src="id_img/wanou.jpg" alt="Case8 Thumbnail">
-                    <p>Custom motion result for Case 8 demonstrating smooth transitions.</p>
-                  </div>
                 </div>
                 <div class="slide-item">
                   <video controls>
                     <source src="videos/case10.mp4" type="video/mp4">
                   </video>
-                  <div class="slide-extra">
-                    <img src="id_img/redbear.jpg" alt="Case10 Thumbnail">
-                    <p>Custom motion result for Case 10 demonstrating smooth transitions.</p>
-                  </div>
                 </div>
                 <div class="slide-item">
                   <video controls>
-                    <source src="videos/case12.mp4" type="video/mp4">
+                    <source src="videos/case2.mp4" type="video/mp4">
                   </video>
-                  <div class="slide-extra">
-                    <img src="id_img/cat.jpg" alt="Case12 Thumbnail">
-                    <p>Custom motion result for Case 12 demonstrating smooth transitions.</p>
-                  </div>
+                </div>
+                <div class="slide-item">
+                  <video controls>
+                    <source src="videos/case6.mp4" type="video/mp4">
+                  </video>
+                </div>
+                <div class="slide-item">
+                  <video controls>
+                    <source src="videos/case17.mp4" type="video/mp4">
+                  </video>
+                </div>
+                <div class="slide-item">
+                  <video controls>
+                    <source src="videos/case20.mp4" type="video/mp4">
+                  </video>
                 </div>
             </div>
             <!-- 导航按钮 -->
